# rag_attack

./: .gitignore  README.md  faq_manuels_mail.json  install_colab.sh  partie1_rag.ipynb  partie1_rag_0.ipynb  partie1_rag_1.ipynb  partie2_agentic_1.ipynb  partie2_agentic_2.ipynb  partie2_agentic_3.ipynb  partie2_agentic_4.ipynb  partie2_agentic_4_old.ipynb  pyproject.toml  rag_attack_demo_mode.ipynb  rag_attack_partie2.ipynb  rag_attack_partie2_agentic.ipynb  rag_partie1.ipynb  requirements.txt  setup.py  test_connections.py  velocop_questions.json  warm_up_jupyter_notebook.ipynb
rag_attack/: __init__.py  agents.py  core.py  embeddings.py  tools.py  utils.py
rag_attack/agents/: __init__.py  base_agent.py  mock_agent.py  react_agent.py  reflection_agent.py  simple_agent.py  simple_react_agent.py
rag_attack/planners/: __init__.py  hierarchical_planner.py
rag_attack/tools/: __init__.py  api_tool.py  azure_search_tool.py  crm_tool.py  erp_tool.py  internet_tool.py  mail_tool.py  rag_tool.py  report_writer_tool.py  sql_tool.py  writer_tool.py
rag_attack/utils/: __init__.py  config.py  test_azure_setup.py
