[project]
name = "rag-attack"
version = "0.1.0"
description = ""
authors = [
    {name = "racousin",email = "racousin@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
