[project]
name = "rag-attack"
version = "0.1.0"
description = ""
authors = [
    {name = "racousin",email = "racousin@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "azure-search-documents (>=11.5.3,<12.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "azure-identity (>=1.25.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
