[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-attack"
version = "0.1.0"
description = "RAG Attack educational toolkit"
authors = [{name = "racousin", email = "racousin@student.42.fr"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "azure-core>=1.35.0",
    "azure-identity>=1.23.0",
    "azure-search-documents>=11.5.3",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "pyodbc>=5.2.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "jupyter (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ddgs (>=9.9.1,<10.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_attack*"]
namespaces = false
